# proof-of-personhood

./: Anchor.toml  Cargo.toml  multiplier.r1cs  multiplier.sym  multiplier.wasm  package.json
.github/workflows/: sbf-stack-check.yml  verifier-bpf.yml
backend/issuer/: README.md  jest.config.cjs  package-lock.json  package.json
backend/issuer/.github/workflows/: ci.yml
backend/issuer/__tests__/: bbs.test.ts  issuer.test.ts
backend/issuer/src/: index.ts  issuer.ts
circuits/: README.md  input.json  multiplier.circom
programs/proof-of-personhood/: Cargo.toml
programs/proof-of-personhood/src/: lib.rs
programs/prover/: Cargo.toml
programs/prover/src/: main.rs
programs/prover/tests/: integration.rs
programs/verifier/: Cargo.toml  README.md
programs/verifier/.github/workflows/: bpf-build.yml
programs/verifier/src/: lib.rs
programs/verifier/tests/: integration.rs  native_verify.rs
scripts/circuits/: compile_and_prove.sh
scripts/client/: submit_proof.ts
tests/: proof-of-personhood.ts
tools/prover/: Cargo.toml
tools/prover/src/: main.rs
tools/prover/tests/: integration.rs
