[workspace]
members = [
    "programs/proof-of-personhood",
    "programs/verifier"
]
resolver = "2"

[patch.crates-io]
ark-ec = { path = "vendor/ark-ec-0.3.0" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
