[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = "^1.21.4"
thiserror = "1.0"
# arkworks dependencies for Groth16 (minimal, no default features)
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.3", default-features = false }
ark-bn254 = { version = "0.3", default-features = false }

[features]
default = ["realloc"]

[dependencies.realloc]
version = "0.1"
optional = true

[profile.release]
opt-level = "s"
strip = "debuginfo"
panic = "abort"
