[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = "2.3.0"
thiserror = "1.0"
# arkworks dependencies for Groth16 (minimal, no default features)
ark-ff = "0.3"
ark-ec = "0.3"
ark-serialize = "0.3"
ark-groth16 = { version = "0.3", default-features = false }
ark-bn254 = "0.3"

[features]
default = []

[dependencies.realloc]
version = "0.1"
optional = true

[dev-dependencies]
ark-relations = "0.3"
ark-r1cs-std = "0.3"
rand = "0.8"

[profile.release]
opt-level = "s"
strip = "debuginfo"
panic = "abort"
